--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
+  flutter_bloc: ^8.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
