--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx1536M
+org.gradle.java.home = /users/lumos/Library/Java/JavaVirtualMachines/temurin-11.0.20.1/Contents/Home
 android.useAndroidX=true
 android.enableJetifier=true
